--- a/chatify/src/Componant/Chat/chat.css
+++ b/chatify/src/Componant/Chat/chat.css
@@ -1,6 +1,6 @@
 
 .chatContainer{
-    background-color: white;
+    background-color: rgb(235, 235, 150);
     height: 95%;
     width: 35%;
 }
@@ -91,3 +91,72 @@
 .sendBtn:hover img{
     transform: translateX(10px);
 }
+
+
+@media screen and (max-width: 620px) {
+    .chatContainer{
+        background-color: rgb(235, 235, 150);
+        height: 100;
+        width: 100%;
+        margin-top: 0;
+    }
+    .header{
+        background-color: rgb(49, 232, 49);
+        height: 10%;
+        margin-top: -10;
+        margin-bottom: 0;
+       display: flex;
+       align-items: center;
+       justify-content: space-between;
+    }
+    .sendBtn{
+        background-color: rgb(49, 232, 49);
+        color: white;
+        border: none;
+        width: 23%;
+        height: 1%;
+        transition: all 0.3s;
+        cursor: pointer;
+        height: 100px;
+    }
+    
+    .sendBtn>img{
+        width: 6vmax;
+        filter:brightness(100) invert();
+        transition: all 0.3s;
+    }
+    #chatInput{
+   
+        width: 100%;
+        height: 30;
+        border: none;
+        box-sizing: border-box;
+        background-color: white;
+        outline: none;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 3vmax;
+        border-top: 0.2vmax solid rgba(41, 41, 41, 0.562);
+    }
+    .chatBox{
+        height: 90%;
+        box-sizing: border-box;
+       }
+       .logo{    
+        padding-right: -13px;
+        width: 8vmax;
+        border-radius: 25%;
+        padding-top: 0.08vmax ;
+        justify-content: start;
+    }
+    .header img{
+        margin: 10vmax;
+        transition: all 0.3s;
+        cursor: pointer;
+    }
+    .header>h2{
+        font-size: 5vmax;
+        color: white;
+        margin: 2.5vmax;
+    }
+    
+  }
