--- a/chatify/src/Componant/Chat/chat.css
+++ b/chatify/src/Componant/Chat/chat.css
@@ -5,7 +5,7 @@
     width: 35%;
 }
 .chatPage{
-    background-color: rgb(31, 29, 29);
+    background-color: #1f1d1d;
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -94,69 +94,94 @@
 
 
 @media screen and (max-width: 620px) {
-    .chatContainer{
-        background-color: rgb(235, 235, 150);
-        height: 100;
-        width: 100%;
-        margin-top: 0;
-    }
-    .header{
-        background-color: rgb(49, 232, 49);
-        height: 10%;
-        margin-top: -10;
-        margin-bottom: 0;
-       display: flex;
-       align-items: center;
-       justify-content: space-between;
-    }
-    .sendBtn{
-        background-color: rgb(49, 232, 49);
-        color: white;
-        border: none;
-        width: 23%;
-        height: 1%;
-        transition: all 0.3s;
-        cursor: pointer;
-        height: 100px;
-    }
-    
-    .sendBtn>img{
-        width: 6vmax;
-        filter:brightness(100) invert();
-        transition: all 0.3s;
-    }
-    #chatInput{
+ 
+.chatContainer{
+    background-color: rgb(235, 235, 150);
+    height: 100%;
+    width: 100%;
+}
+.chatPage{
+    background-color: #1f1d1d;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.header{
+    background-color: rgb(49, 232, 49);
+    height: 10%;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
+
+.header>h2{
+    font-size: 3.6vmax;
+    color: white;
+    margin: 5.5vmax;
+}
+.logo{    
+    padding-right: -13px;
+    width: 7vmax;
+    border-radius: 25%;
+    padding-top: 0.08vmax ;
+    justify-content: start;
+}
+.header img{
+    margin: 4.6vmax;
+    transition: all 0.3s;
+    cursor: pointer;
+    transform: 1.3;
+}
+.header>img:hover{
+    transform: scale(1.2);
+}
+
+
+.chatBox{
+
+ height: 80%;
+ box-sizing: border-box;
+ 
+}
+
+.inputBox{
+    padding-bottom: -5;
+    height: 10% !important;
+    box-sizing: border-box;
+    display: flex;
+}
+
+#chatInput{
    
-        width: 100%;
-        height: 30;
-        border: none;
-        box-sizing: border-box;
-        background-color: white;
-        outline: none;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 3vmax;
-        border-top: 0.2vmax solid rgba(41, 41, 41, 0.562);
-    }
-    .chatBox{
-        height: 90%;
-        box-sizing: border-box;
-       }
-       .logo{    
-        padding-right: -13px;
-        width: 8vmax;
-        border-radius: 25%;
-        padding-top: 0.08vmax ;
-        justify-content: start;
-    }
-    .header img{
-        margin: 10vmax;
-        transition: all 0.3s;
-        cursor: pointer;
-    }
-    .header>h2{
-        font-size: 5vmax;
-        color: white;
-        margin: 2.5vmax;
-    }
+    width: 80%;
+    border: none;
+    padding: 4vmax;
+    box-sizing: border-box;
+    background-color: white;
+    outline: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 3.5vmax;
+    border-top: 0.2vmax solid rgba(41, 41, 41, 0.562);
+}
+
+
+.sendBtn{
+    background-color: rgb(49, 232, 49);
+    color: white;
+    border: none;
+    width: 21%;
+    transition: all 0.3s;
+    cursor: pointer;
+}
+
+.sendBtn>img{
+    width: 8vmax;
+    filter:brightness(100) invert();
+    transition: all 0.3s;
+    color: white;
+}
+
     
   }
